Jann 30/objects/RFAApproverGroupUser__c.object
<CustomObject>
    <description>This stores the RFA approver details with corresponding group</description>
    <fields>
        <fullName>Agent1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFAApproverGroupUsers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFAApproverGroupUsers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFAApproverGroupUsers3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalComments__c</fullName>
        <label>ApprovalComments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FunctionalGroupName__c</fullName>
        <description>Group names</description>
        <label>FunctionalGroupName</label>
        <picklist>
            <picklistValues>
                <fullName>Test Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFAGroupApprover__c</fullName>
        <label>RFAGroupApprover</label>
        <referenceTo>RFAGroupApprover__c</referenceTo>
        <relationshipLabel>RFAApproverGroupUsers</relationshipLabel>
        <relationshipName>RFAApproverGroupUsers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>userName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFAApproverGroupUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>userRoleName__c</fullName>
        <label>userRoleName</label>
        <picklist>
            <picklistValues>
                <fullName>Info copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>approver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RFAApproverGroupUser</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RFAGroupApprover__c</columns>
        <columns>userRoleName__c</columns>
        <columns>userName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>RFA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFAApproverGroupUsers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>